# UaiBank

./: README.md
UaiBank2/: CMakeLists.txt
UaiBank2/Funcoes/code/: banco.c  banco.h  buscar.c  buscar.h  inserirUsuario.c  inserirUsuario.h  main.c  remover.c  remover.h  transferir.c  transferir.h
